--- a/galeria.html
+++ b/galeria.html
@@ -6,6 +6,7 @@
     <title>Galeria</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="icon" href="img/icono.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <audio src="audio/Bam Yang Gang - BIBI.mp3" autoplay="" loop=""></audio> 
