--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <h3>"Los mejores postres con <span>fresas</span>, para los días dulces".</h3>
           <nav>
               <ul class="menu">
-                  <li><a href="index.html"></a>INICIO</li>
-                  <li><a href="blog.html"></a>BLOG</li>
-                  <li><a href="galeria.html"></a>GALERIA</li>
-                  <li><a href="videos.html"></a>VIDEOS</li>
+                  <li><a href="index.html">INICIO</a></li>
+                  <li><a href="blog.html">BLOG</a></li>
+                  <li><a href="galeria.html">GALERIA</a></li>
+                  <li><a href="videos.html">VIDEOS</a></li>
               </ul>
           </nav>
            <div>
